Update presentation texts and offline letters

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,10 +2,10 @@
   "appTitle": "Infra Research Hub",
   "languageRu": "Russian",
   "languageEn": "English",
-  "navDr1": "Research Paper 1",
-  "navDr2": "Research Paper 2",
-  "navDr25": "Research Paper 3",
-  "navDr3": "Research Paper 4",
+  "navDr1": "Stack Proof",
+  "navDr2": "Launch Blueprint",
+  "navDr25": "Market Bridge",
+  "navDr3": "Value Engine",
   "navProfile": "Profile",
   "sourcesTitle": "Sources",
   "contentsTitle": "Contents",
@@ -24,17 +24,21 @@
   "profileTelegramLabel": "Telegram",
   "profileSla": "SLA: 24h weekday response",
   "profilePitchHeading": "Research pack",
-  "profilePitchBody": "Offline ZIP with Research Papers 1–4, bilingual notes, and slots for forthcoming recommendation letters.",
+  "profilePitchBody": "Offline ZIP with Research Papers 1–4, bilingual notes, and bundled recommendation letters ready to forward.",
   "profilePitchDownload": "Download pack",
   "profilePitchShare": "Share pack",
   "profilePitchSaveSuccess": "Research pack saved locally.",
   "profilePitchSaveError": "Couldn’t save the pack. Try again.",
   "profileLettersHeading": "Recommendation letters",
-  "profileLettersBody": "On-demand Google Docs with due-diligence quotes. PDFs land inside the research pack when exported.",
+  "profileLettersBody": "Letters sit below: TXT opens inline, DOCX saves locally so it can be co-signed without leaving the app.",
   "profileLettersOpenCta": "Open letter",
+  "profileLettersReadCta": "Read letter",
+  "profileLettersDownloadCta": "Save letter",
   "profileLettersPendingLabel": "Letter planned",
   "profileLettersStatusLive": "Live",
   "profileLettersStatusPending": "Incoming",
+  "profileLettersDownloadSuccess": "Letter saved locally.",
+  "profileLettersDownloadError": "Couldn't load the letter. Try again.",
   "detailShare": "Share",
   "detailCopyQuote": "Copy Quote",
   "detailPdf": "PDF",
@@ -52,7 +56,7 @@
   "tagValue": "Value",
   "noteButtonOpen": "Open note",
   "presentationCardTitle": "Launch presentation",
-  "presentationCardBody": "Open the offline deck directly in the app. Works without network access.",
+  "presentationCardBody": "Show the presentation with the core research storyline.",
   "presentationLaunchCta": "Launch deck",
   "presentationTitle": "Infra Deck",
   "presentationLoadError": "Deck asset is missing in this build.",
