--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -2,10 +2,10 @@
   "appTitle": "Infra Research Hub",
   "languageRu": "Русский",
   "languageEn": "Английский",
-  "navDr1": "Исследование 1",
-  "navDr2": "Исследование 2",
-  "navDr25": "Исследование 3",
-  "navDr3": "Исследование 4",
+  "navDr1": "Пруф стека",
+  "navDr2": "Блюпринт запуска",
+  "navDr25": "Маркет-мост",
+  "navDr3": "Модель ценности",
   "navProfile": "Профиль",
   "sourcesTitle": "Источники",
   "contentsTitle": "Оглавление",
@@ -24,17 +24,21 @@
   "profileTelegramLabel": "Telegram",
   "profileSla": "SLA: ответ ≤24ч в рабочие дни",
   "profilePitchHeading": "Ресёрч-пакет",
-  "profilePitchBody": "Оффлайн ZIP с Исследованиями 1–4, двуязычными заметками и местом для рекомендательных писем.",
+  "profilePitchBody": "Оффлайн ZIP с Исследованиями 1–4, двуязычными заметками и готовыми рекомендательными письмами.",
   "profilePitchDownload": "Скачать пакет",
   "profilePitchShare": "Поделиться пакетом",
   "profilePitchSaveSuccess": "Ресёрч-пакет сохранён локально.",
   "profilePitchSaveError": "Не удалось сохранить пакет. Повторите попытку.",
   "profileLettersHeading": "Рекомендательные письма",
-  "profileLettersBody": "Живые Google Docs с цитатами due diligence. При экспорте PDF попадут внутрь ресёрч-пакета.",
+  "profileLettersBody": "Письма ниже: TXT открывается прямо в приложении, DOCX сохраняется локально для подписи.",
   "profileLettersOpenCta": "Открыть письмо",
+  "profileLettersReadCta": "Прочитать письмо",
+  "profileLettersDownloadCta": "Сохранить письмо",
   "profileLettersPendingLabel": "Письмо в пути",
   "profileLettersStatusLive": "Готово",
   "profileLettersStatusPending": "Ожидается",
+  "profileLettersDownloadSuccess": "Письмо сохранено локально.",
+  "profileLettersDownloadError": "Не удалось открыть письмо. Попробуйте ещё раз.",
   "detailShare": "Поделиться",
   "detailCopyQuote": "Скопировать цитату",
   "detailPdf": "PDF",
@@ -52,9 +56,9 @@
   "tagValue": "Ценность",
   "noteButtonOpen": "Открыть заметку",
   "presentationCardTitle": "Запустить презентацию",
-  "presentationCardBody": "Показать оффлайн-деку прямо в приложении. Работает без интернета.",
-  "presentationLaunchCta": "Запустить деку",
+  "presentationCardBody": "Показать презентацию с ключевыми материалами исследования.",
+  "presentationLaunchCta": "Запустить презентацию",
   "presentationTitle": "Infra Deck",
   "presentationLoadError": "Файл презентации отсутствует в сборке.",
-  "presentationCloseCta": "Закрыть деку"
+  "presentationCloseCta": "Закрыть презентацию"
 }
